Big Test update
Pretty much every test is done. Might add more for playwright testing though.